--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <meta property="og:title" content="Tran Quoc Tuan - Full-Stack Developer Portfolio" />
     <meta property="og:description" content="7+ years experienced NodeJS Developer with Solution Architect Certification. Specialized in AWS, React, and modern web technologies." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://tuantran1295.github.io/Tuan-Tran-portfolio/og-image.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="https://tuantran1295.github.io/" />
+    <meta name="twitter:image" content="https://tuantran1295.github.io/Tuan-Tran-portfolio/og-image.png" />
     
     <!-- Preconnect to optimize font loading -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
